Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10220

Incorrect record length allocated in mdd_changelog_data_store_by_fid()

XMLWordPrintable

    • 3
    • 9223372036854775807

      In mdd_changelog_data_store_by_fid(), the record length calculated to allocate mti_big_buf is not correct, because it forgets to take the header size of struct llog_changelog_rec into account.

      I guess it never generated memory corruptions before, because the buffer size allocated in a previous call to mdd_declare_changelog_store() was covering the need.
      But now that LU-9727 adds more information in changelog records, I am able to provoke memory corruptions.

      I will submit a patch to fix this problem.

      Sebastien.

            sbuisson Sebastien Buisson (Inactive)
            sbuisson Sebastien Buisson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: